# person_caffe

./: .bashrc  README.md
caffe/: CMakeCache.txt  CaffeConfig.cmake  Makefile  Makefile.config.python2.7  caffe_config.h  diff
caffe/docs/: Makefile
caffe/examples/: Makefile  cmake_install.cmake
caffe/examples/MobileNet-SSD/: caffe_result.txt  convert_net.py  deploy.prototxt  net_result_2.txt  ssd_result_caffe.txt  test_jd_mobilenet_ssd_bak.py  test_mobilenetssd_std.py  test_onet.py  test_ruiwei.py  test_xiaomeng.py  test_xm.py
caffe/examples/cifar10/: convert_cifar_data
caffe/examples/mnist/: convert_mnist_data
caffe/examples/siamese/: convert_mnist_siamese_data  create_mnist_siamese.sh
caffe/include/caffe/: common.cuh  vision_layers.hpp
caffe/python/: cmake_install.cmake
caffe/src/caffe/: Makefile
caffe/src/gtest/: cmake_install.cmake
caffe/tools/: Makefile  caffe  convert_imageset  create_label_map  get_image_size  net_speed_benchmark  test_net  upgrade_net_proto_text  upgrade_solver_proto_text
caffe_bp/: CaffeTargets.cmake  Makefile.config.python3.5  cmake_install.cmake
caffe_bp/docs/: cmake_install.cmake
caffe_bp/examples/MobileNet-SSD/: demo.py  merge_bn.py  merge_bn_jd.py  (+4 more)
caffe_bp/matlab/: Makefile  cmake_install.cmake
caffe_bp/python/: Makefile
caffe_bp/tools/: cmake_install.cmake  compute_image_mean  convert_annoset  device_query  extract_features  finetune_net  train_net  upgrade_net_proto_binary
others/caffe_yolov3_retinaFace_cpu/caffe-yolov3-retinaFace/detectnet/: CMakeLists.txt  detectnet.cpp  retinafaceNet.cpp
(+269 files in other folders)
